2003-07-19  Evandro Fernandes Giovanini <evandrofg@ig.com.br>

	* configure.in: Added "pt_BR" (Brazilian Portuguese)
	to ALL_LINGUAS.

2003-07-11  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Add Norwegian translation.
	* po/ChangeLog:
	* po/no.po:

2003-07-10  Hasbullah Bin Pit  <sebol@ikhlas.com>
                                                                                 
        * configure.in: Added "ms" (Malay) to ALL_LINGUAS.

2003-07-09  Dafydd Harries  <daf@parnassus.ath.cx>

	* configure.in: Added "cy" (Welsh) to ALL_LINGUAS.

2003-07-09  Alessio Frusciante  <algol@firenze.linux.it>

	* configure.in: Added "it" (Italian) to ALL_LINGUAS.

2003-07-06  Artur Flinta  <aflinta@cvs.gnome.org>
                                                                                
        * configure.in: Added "pl" to ALL_LINGUAS.
	
=== gtksourceview 0.4.0 ===

2003-06-30  Paolo Maggi  <paolo.maggi@polito.it>

	* NEWS: Updated

2003-06-30  Paolo Maggi  <paolo.maggi@polito.it>

	* configure.in: Bumped version to 0.4.0

	* README: updated

2003-06-28  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* docs/reference/tmpl/stylescheme.sgml: Add get_style_names method.
	* gtksourceview/gtksourcelanguage.c:
	(gtk_source_language_get_tag_default_style): Check for NULL style.
	* gtksourceview/gtksourcestylescheme.c:
	(gtk_source_style_scheme_get_style_names),
	(gtk_source_default_style_scheme_IFace_init),
	(gtk_source_default_style_scheme_get_tag_style),
	(gtk_source_default_style_scheme_get_name), (add_style_name),
	(gtk_source_default_style_scheme_get_style_names): Implement
	get_style_names method.
	* gtksourceview/gtksourcestylescheme.h: Add get_style_names method.

2003-06-28  Gil "Dolfin" Osher <dolfin@rpg.org.il>

	* configure.in: Added "he" (Hebrew) to ALL_LINGUAS.

2003-06-23  Paolo Maggi <paolo.maggi@polito.it> 

	* gtksourceview/gtksourcelanguage-private.h (GtkSourceLanguagePrivate):
	added id, renamed tag_name_to_style_name to tag_id_to_style_name and